# shekar

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md
docs/en/: index.md
docs/en/getting_started/: installation.md
docs/en/tutorials/: augmentation.md  classification.md  dependency_parsing.md  preprocessing.md  transliteration.md
docs/fa/: index.md
docs/fa/getting_started/: installation.md  quick_start.md
docs/fa/tutorials/: augmentation.md  cli.md  (+11 more)
docs/getting_started/: quick_start.md
docs/tutorials/: preprocessing.md
examples/: keyword_extraction.ipynb  preprocessing.ipynb  word_cloud.ipynb
lab/: albert_persian_dep_parser_train.ipynb  byt5_farsi_tajik_transliteration.ipynb
shekar/: __init__.py  __main__.py  base.py  cli.py  conjugator.py  hub.py  normalizer.py  pipeline.py  server.py  tokenizers.py  utils.py  word_cloud.py
shekar/NER/: __init__.py
shekar/classification/: __init__.py  base_informal.py  informal_rule_based.py
shekar/data/: __init__.py
shekar/dep_parsing/: __init__.py  albert_dep_parser.py  base.py
shekar/diction/: __init__.py  persianizer.py
shekar/embeddings/: __init__.py  albert_embedder.py  base.py  word_embedder.py
shekar/keyword_extraction/: __init__.py  base.py  rake.py  textrank.py
shekar/morphology/: __init__.py  conjugator.py  lemmatizer.py  stemmer.py
shekar/ner/: __init__.py  albert_ner.py  base.py
shekar/pos/: albert_pos.py
shekar/preprocessing/: __init__.py  transformations.py
shekar/sentiment_analysis/: albert_sentiment_binary.py  base.py
shekar/spell_checking/: __init__.py  base.py  statistical.py
shekar/spelling/: checker.py  statistical_checker.py
shekar/tokenization/: __init__.py  albert_tokenizer.py  sentence_tokenizer.py
shekar/toxicity/: __init__.py  base_offensive.py  logistic_offensive_classifier.py
shekar/transforms/: __init__.py  ngram_extractor.py  number_to_words.py
shekar/transliteration/: __init__.py  byt5_decoder.py  byt5_encoder.py  byt5_tokenizer.py  byt5_transliterator.py  farsi_to_tajik.py  tajik_to_farsi.py
tests/: test_cli.py  test_conjugator.py  test_embeddings.py  test_hub.py  test_normalizer.py  test_pipeline.py  test_preprocessors.py  test_sentence_tokenizer.py  test_server.py  test_tokenizers.py
(+65 files in other folders)
