[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shekar"
version = "1.4.0"
description = "Simplifying Persian NLP for Modern Applications"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ahmad Amirivojdan", email = "amirivojdan@gmail.com" }]
requires-python = ">=3.11"

keywords = [
    "NLP",
    "Natural Language Processing",
    "Persian",
    "Shekar",
    "Text Processing",
    "Machine Learning",
    "Deep Learning",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Persian",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.0.0",
    "tqdm>=4.67.1",
    "onnxruntime>=1.24.1",
    "flashtext>=2.7",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
viz = [
    "wordcloud>=1.9.4",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.6",
    "pillow>=11.2.1",
]

all = [
  "shekar[viz]"
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "coverage>=7.8.0",
    "termynal>=0.13.0",
    "ruff>=0.12.5",
    "mkdocs-static-i18n>=1.3.0",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["shekar", ".venv", ".git", "examples", "lab"]

[project.urls]
Homepage = "https://github.com/amirivojdan/shekar"
Repository = "https://github.com/amirivojdan/shekar"
Documentation = "https://lib.shekar.io"
Issues = "https://github.com/amirivojdan/shekar/issues"
Changelog = "https://github.com/amirivojdan/shekar/releases"
